--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html charset="utf8">
 <head>
-<title>Linc|HomePage</title>
+<title>HomePage|Linc</title>
 <style type="text/css">
 	div#Header 
 	{
