Revert "修改了各个网页的title"
This reverts commit b23b9a2c6770ea322fdb3571ade2ae3990bf78df.

--- a/mission.html
+++ b/mission.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html charset="utf8">
 <head>
-<title>Mission|Linc</title>
+<title>Linc|HomePage</title>
 <style type="text/css">
 	div#Header 
 	{
