增加了字体文件

--- a/article_01.html
+++ b/article_01.html
@@ -2,6 +2,7 @@
 <html charset="utf8">
 <head>
 <title>Article1|Linc</title>
+<link href="font.css" type="text/css" rel="stylesheet"/>
 <style type="text/css">
 	div#Header 
 	{
