--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html charset="utf8">
 <head>
-<title>Linc|HomePage</title>
+<title>Blog|Linc</title>
+<link href="font.css" type="text/css" rel="stylesheet"/>
 <style type="text/css">
 	div#Header 
 	{
