修改了边框图片

--- a/article_01.html
+++ b/article_01.html
@@ -249,7 +249,7 @@
 			<div id = "Content_Header">
 				<div id = "Headline">WEB前端日志</div>
 				<div id = "Date">2014.7.1 清华园</div>
-				<div id = "Line"><img  src = "sites\images\line.png"></div>
+				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 			</div>
 			<div id = "ContentFrame">
 				<div id = "Content">
@@ -270,7 +270,7 @@
 				</body>
 				</div>
 			</div>
-			<div id = "Line2"><img  src = "sites\images\line.png"></div>
+			<div id = "Line2"><img  src = "sites\images\frameline.png"></div>
 			<footer id = "ContentFooter"></footer>
 			<a href="Introduction.html">
 					<img id = "Introduce" src="sites\icons\Introduce.png">
