--- a/introduction.html
+++ b/introduction.html
@@ -155,7 +155,7 @@
 			<div id = "Content_Header">
 				<div id = "Theme">About Me</div>
 				<div id = "Subtheme">LEARN WHO I AM</div>
-				<div id = "Line"><img  src = "sites\images\line.png"></div>
+				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 				<div id = "Introduction">
 					<h1>林聪</h1>
 					<h4>基本信息</h4>
