--- a/mission.html
+++ b/mission.html
@@ -178,7 +178,7 @@
 			<div id = "Content_Header">
 				<div id = "Theme">My mission is clear</div>
 				<div id = "Subtheme">KNOW I AM UP TO DO</div>
-				<div id = "Line"><img  src = "sites\images\line.png"></div>
+				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 			</div>
 			<div class = "ContentFrame">
 				<div class = "Content">
