--- a/result.html
+++ b/result.html
@@ -182,7 +182,7 @@
 			<div id = "Content_Header">
 				<div id = "Theme">Every step is significant</div>
 				<div id = "Subtheme">GET WHAT I HAVE DONE</div>
-				<div id = "Line"><img  src = "sites\images\line.png"></div>
+				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 			</div>
 			<div class = "ContentFrame">
 				<div class = "Content">
