--- a/blog.html
+++ b/blog.html
@@ -205,7 +205,7 @@
 			<div id = "Content_Header">
 				<div id = "Theme">This is my blog</div>
 				<div id = "Subtheme">SEE WHAT I AM DOING</div>
-				<div id = "Line"><img  src = "sites\images\line.png"></div>
+				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 			</div>
 			<div id = "Content">
 				<div class = "Article">
