修复了坏链接

--- a/article_01.html
+++ b/article_01.html
@@ -272,7 +272,7 @@
 			</div>
 			<div id = "Line2"><img  src = "sites\images\frameline.png"></div>
 			<footer id = "ContentFooter"></footer>
-			<a href="Introduction.html">
+			<a href="introduction.html">
 					<img id = "Introduce" src="sites\icons\Introduce.png">
 			</a>
 		</section>
