--- a/blog.html
+++ b/blog.html
@@ -254,7 +254,7 @@
 					</li>
 				</div>
 			</div>
-			<a href="Introduction.html">
+			<a href="introduction.html">
 					<img id = "Introduce" src="sites\icons\Introduce.png">
 			</a>
 		</section>
