--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
 			<article id = "Menu_Header">
 				<div id = "Mission_Link">
 					<img class = "Link_Icon" src="sites/icons/Mission1.png">
-					<a href="Mission.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp MISSION</a>
+					<a href="mission.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp MISSION</a>
 				</div>
 				<div id = "Blog_Link">
 					<img class = "Link_Icon" src="sites/icons/Blog1.png">
-					<a href="Blog.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp BLOG</a>
+					<a href="blog.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp BLOG</a>
 				</div>
 				<div id = "Result_Link">
 					<img class = "Link_Icon" src="sites/icons/Result1.png">
-					<a href="Result.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp RESULT</a>
+					<a href="result.html" class = "Menu_Buttom"  style="text-decoration:none"> &nbsp RESULT</a>
 				</div>
 				<div id = "Header_Content">Everything that kills me makes me feel alive.</div>
 				<div id = "Header_Content1">Young, but I'm not that bold.<br>And I don't think the world is sold.</div>
 			</article>
-			<a href="Introduction.html">
+			<a href="introduction.html">
 					<img id = "Introduce" src="sites\icons\Introduce.png">
 			</a>
 		</section>
