--- a/mission.html
+++ b/mission.html
@@ -190,7 +190,7 @@
 				</ul>
 				</div>
 			</div>
-			<a href="Introduction.html">
+			<a href="introduction.html">
 					<img id = "Introduce" src="sites\icons\Introduce.png">
 			</a>
 		</section>
