--- a/article_01.html
+++ b/article_01.html
@@ -1,281 +1,281 @@
-﻿<!DOCTYPE html>
-<html charset="utf8">
-<head>
-<title>Article1|Linc</title>
-<link href="font.css" type="text/css" rel="stylesheet"/>
-<style type="text/css">
-	div#Header 
-	{
-		background: rgb(56,56,56);
-		position: fixed;
-		z-index: 4;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		width: 240px;
-		font-family: "Calibri";
-	}
-	img#Homeicon
-	{
-		margin-top: 30px;
-		margin-left: 55px;
-		width: 110px;
-		height: 110px;
-	}
-	nav.Navigation
-	{
-		position: absolute;
-		top: 35%;
-	}
-	img.Menu_icon
-	{
-		float: left;
-		width: 42px;
-		height: 42px;
-		margin-top: 25px;
-		margin-left: 25px;
-		display: block;
-	}
-	span.Menu_item
-	{
-		font-size: 30px;
-		color: white;
-		display: block;
-		padding:18px 0 0 80px;
-	}
-	span.Menu_subitem
-	{
-		font-size: 15px;
-		color:rgb(120, 120, 120);
-		display: block;
-		margin-left:80px;
-	}
-	footer#Footer
-	{
-		position: absolute;
-		bottom: 1%;
-		left: 20%;
-	}
-	section#About
-	{
-		text-align: center;
-		color: white;
-		font-family: "Eras Light ITC";
-		font-size: 15px;
-	}
-	div.Pages
-	{
-		z-index: 1;
-	}
-	section#HomePage
-	{
-		background: url(sites/images/article_wallpaper.jpg) repeat;
-		background-position: center bottom !important; 
-		background-size: cover; 
-		position: absolute;
-		top: 0;
-		left: 240px;
-		right: 0;
-		bottom: 110;
-		color: white;
-	}
-	div#Content_Header
-	{
-		margin-top: 100px;
-		margin-left: 100px;
-		font-family: "Century Gothic";
-	}
-	div#Headline
-	{
-		font-family:"微软雅黑";
-		color: #595959;
-		font-size: 70px;
-	}
-	div#Date
-	{
-		font-family:"微软雅黑";
-		margin-left: 5px;
-		color: #595959;
-		font-size: 25px;
-	}
-	div#Line
-	{
-		margin-left:5px;
-		margin-top:-10px;
-	}
-	div#ContentFrame
-	{
-		margin-left: 100px;
-		margin-top: 10px;
-		background:#352b2c;
-		width:50%;
-		opacity: 0.7;
-	}
-	div#Content
-	{
-		font-family:"微软雅黑";
-		margin-left: 50px;
-	}
-	div#Line2
-	{
-		margin-left:100px;
-		margin-top:3px;
-	}
-	footer#ContentFooter
-	{
-		height:200px;
-	}
-	div#Article1
-	{
-		height: 250px;
-		width: 600px;
-		word-wrap: break-word; 
-		word-break: normal; 
-		float:left; 
-		display:inline;
-	}
-	img.Article_icon
-	{
-		float: left;
-		width: 100px;
-		height: 100px;
-		margin-top: 25px;
-		margin-left: 25px;
-		display: block;
-	}
-	span.Article_head
-	{
-		font-size: 40px;
-		color: #828282;
-		display: block;
-		padding:30px 0 0 100px;
+﻿	<!DOCTYPE html>
+	<html charset="utf8">
+	<head>
+	<title>Article1|Linc</title>
+	<link href="font.css" type="text/css" rel="stylesheet"/>
+	<style type="text/css">
+		div#Header 
+		{
+			background: rgb(56,56,56);
+			position: fixed;
+			z-index: 4;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			width: 240px;
+			font-family: "Calibri";
+		}
+		img#Homeicon
+		{
+			margin-top: 30px;
+			margin-left: 55px;
+			width: 110px;
+			height: 110px;
+		}
+		nav.Navigation
+		{
+			position: absolute;
+			top: 35%;
+		}
+		img.Menu_icon
+		{
+			float: left;
+			width: 42px;
+			height: 42px;
+			margin-top: 25px;
+			margin-left: 25px;
+			display: block;
+		}
+		span.Menu_item
+		{
+			font-size: 30px;
+			color: white;
+			display: block;
+			padding:18px 0 0 80px;
+		}
+		span.Menu_subitem
+		{
+			font-size: 15px;
+			color:rgb(120, 120, 120);
+			display: block;
+			margin-left:80px;
+		}
+		footer#Footer
+		{
+			position: absolute;
+			bottom: 1%;
+			left: 20%;
+		}
+		section#About
+		{
+			text-align: center;
+			color: white;
+			font-family: "Eras Light ITC";
+			font-size: 15px;
+		}
+		div.Pages
+		{
+			z-index: 1;
+		}
+		section#HomePage
+		{
+			background: url(sites/images/article_wallpaper.jpg) repeat;
+			background-position: center bottom !important; 
+			background-size: cover; 
+			position: absolute;
+			top: 0;
+			left: 240px;
+			right: 0;
+			bottom: 110;
+			color: white;
+		}
+		div#Content_Header
+		{
+			margin-top: 100px;
+			margin-left: 100px;
+			font-family: "Century Gothic";
+		}
+		div#Headline
+		{
+			font-family:"微软雅黑";
+			color: #595959;
+			font-size: 70px;
+		}
+		div#Date
+		{
+			font-family:"微软雅黑";
+			margin-left: 5px;
+			color: #595959;
+			font-size: 25px;
+		}
+		div#Line
+		{
+			margin-left:5px;
+			margin-top:-10px;
+		}
+		div#ContentFrame
+		{
+			margin-left: 100px;
+			margin-top: 10px;
+			background:#352b2c;
+			width:50%;
+			opacity: 0.7;
+		}
+		div#Content
+		{
+			font-family:"微软雅黑";
+			margin-left: 50px;
+		}
+		div#Line2
+		{
+			margin-left:100px;
+			margin-top:3px;
+		}
+		footer#ContentFooter
+		{
+			height:200px;
+		}
+		div#Article1
+		{
+			height: 250px;
+			width: 600px;
+			word-wrap: break-word; 
+			word-break: normal; 
+			float:left; 
+			display:inline;
+		}
+		img.Article_icon
+		{
+			float: left;
+			width: 100px;
+			height: 100px;
+			margin-top: 25px;
+			margin-left: 25px;
+			display: block;
+		}
+		span.Article_head
+		{
+			font-size: 40px;
+			color: #828282;
+			display: block;
+			padding:30px 0 0 100px;
 
-	}
-	span.Article_abstract
-	{
-		font-size: 20px;
-		color:#828282;
-		display: block;
-		padding:20px 0 0 100px;
-	}
-	img#Introduce
-	{
-		position:fixed;
-		bottom:0%;
-		right:0;
-	}
-	div#RecentInfo
-	{
-		font-family:"微软雅黑";
-		position:fixed;
-		background:#352b2c;
-		right:0;
-		width:200px;
-		height:300px;
-		top:30%;
-		opacity: 0.5;
-	}
-	div#RecentHead
-	{
-		margin-left:20px;
-		color:white;
-	}
-	div#RecentContent
-	{
-		position:center;
-		color:white;
-	}
-	a.ContentLink
-	{
-		color:white;
-	}
-</style>
-</head>
-<body>
-	<div id = "Header" class = "Header">
-		<div id = "HomePage">
-			<a href="index.html">
-				<img id = "Homeicon" src="sites\icons\HomeIcon.png">
-			</a>
+		}
+		span.Article_abstract
+		{
+			font-size: 20px;
+			color:#828282;
+			display: block;
+			padding:20px 0 0 100px;
+		}
+		img#Introduce
+		{
+			position:fixed;
+			bottom:0%;
+			right:0;
+		}
+		div#RecentInfo
+		{
+			font-family:"微软雅黑";
+			position:fixed;
+			background:#352b2c;
+			right:0;
+			width:200px;
+			height:300px;
+			top:30%;
+			opacity: 0.5;
+		}
+		div#RecentHead
+		{
+			margin-left:20px;
+			color:white;
+		}
+		div#RecentContent
+		{
+			position:center;
+			color:white;
+		}
+		a.ContentLink
+		{
+			color:white;
+		}
+	</style>
+	</head>
+	<body>
+		<div id = "Header" class = "Header">
+			<div id = "HomePage">
+				<a href="index.html">
+					<img id = "Homeicon" src="sites\icons\HomeIcon.png">
+				</a>
+			</div>
+				<nav id = "Navigation" class = "Navigation">
+					<div id = "Menu">
+						<li style="list-style-type:none;">
+							<a href="mission.html" style="text-decoration:none">
+							<img class = "Menu_icon" src="sites\icons\Mission.png">
+							<span class = "Menu_item">Mission</span>
+							<span class = "Menu_subitem">Know I'm up to do</span>
+							</a>
+						</li>
+						<li style="list-style-type:none;">
+							<a href="blog.html" style="text-decoration:none">
+							<img class = "Menu_icon" src="sites\icons\Blog.png">
+							<span class = "Menu_item">Blog</span>
+							<span class = "Menu_subitem">See what I am doing</span>
+							</a>
+						</li>
+						<li style="list-style-type:none;">
+							<a href="result.html" style="text-decoration:none">
+							<img class = "Menu_icon" src="sites\icons\Result.png">
+							<span class = "Menu_item">Result</span>
+							<span class = "Menu_subitem">Get what I have done</span>
+							</a>
+						</li>
+					</div>
+				</nav>
+			<footer id = "Footer">
+				<section id = "About">Made in THU 2014</section>
+			</footer>
 		</div>
-			<nav id = "Navigation" class = "Navigation">
-				<div id = "Menu">
-					<li style="list-style-type:none;">
-						<a href="mission.html" style="text-decoration:none">
-						<img class = "Menu_icon" src="sites\icons\Mission.png">
-						<span class = "Menu_item">Mission</span>
-						<span class = "Menu_subitem">Know I'm up to do</span>
-						</a>
-					</li>
-					<li style="list-style-type:none;">
-						<a href="blog.html" style="text-decoration:none">
-						<img class = "Menu_icon" src="sites\icons\Blog.png">
-						<span class = "Menu_item">Blog</span>
-						<span class = "Menu_subitem">See what I am doing</span>
-						</a>
-					</li>
-					<li style="list-style-type:none;">
-						<a href="result.html" style="text-decoration:none">
-						<img class = "Menu_icon" src="sites\icons\Result.png">
-						<span class = "Menu_item">Result</span>
-						<span class = "Menu_subitem">Get what I have done</span>
-						</a>
-					</li>
-				</div>
-			</nav>
-		<footer id = "Footer">
-			<section id = "About">Made in THU 2014</section>
-		</footer>
-	</div>
 
-	<div class = "Pages">
-		<section id = "HomePage">
-			<div id = "RecentInfo">
-				<div id = "RecentHead">
-				<h1>最近的日志</h1>
-				</div>
-				<div id = "RecentContent">
-					<ul>
+		<div class = "Pages">
+			<section id = "HomePage">
+				<div id = "RecentInfo">
+					<div id = "RecentHead">
+					<h1>最近的日志</h1>
+					</div>
+					<div id = "RecentContent">
+						<ul>
 
-						<a href="article_01.html" style="text-decoration:none" class= "ContentLink"><li>WEB前端日志</li></a>
-						<li>第二篇日志</li>
-						<li>赏月Recital</li>
-						<li>空想Forest</li>
-						<li>Outer Science</li>
-						<li>Summer Time Record</li>
-					</ul>
+							<a href="article_01.html" style="text-decoration:none" class= "ContentLink"><li>WEB前端日志</li></a>
+							<a href="article_02.html" style="text-decoration:none" class= "ContentLink"><li>Javascript基础练习</li></a>
+							<li>赏月Recital</li>
+							<li>空想Forest</li>
+							<li>Outer Science</li>
+							<li>Summer Time Record</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<div id = "Content_Header">
-				<div id = "Headline">WEB前端日志</div>
-				<div id = "Date">2014.7.1 清华园</div>
-				<div id = "Line"><img  src = "sites\images\frameline.png"></div>
-			</div>
-			<div id = "ContentFrame">
-				<div id = "Content">
-				<body>
-				<br>
-				对课程的期待
-				<li>我要学HTML5写酷炫的游戏！！</li>
-				<li>想多了解一些酷炫好玩的JS和CSS库！</li>
-				<li>求各种好用的开发工具！</li><br>
-				对WEB前端的理解
-				<li>这两天自己不仅是个码农还是美工还是个编辑…</li>
-				<li>深切感受到一个人真的不太可能做好前端</li>
-				<li>想要做好需要很好的团队合作</li>
-				<li>最重要的是浏览器不兼容简直坑爹TAT在CHROME下完美的东西<br>在IE下就有各种瑕疵。摔！</li><br>
-				对老师助教想说的话
-				<li>助教人赞就是逗比了点。XD</li>
-				<br>
-				</body>
+				<div id = "Content_Header">
+					<div id = "Headline">WEB前端日志</div>
+					<div id = "Date">2014.7.1 清华园</div>
+					<div id = "Line"><img  src = "sites\images\frameline.png"></div>
 				</div>
-			</div>
-			<div id = "Line2"><img  src = "sites\images\frameline.png"></div>
-			<footer id = "ContentFooter"></footer>
-			<a href="introduction.html">
-					<img id = "Introduce" src="sites\icons\Introduce.png">
-			</a>
-		</section>
-	</div>
-</body>
-</html>
+				<div id = "ContentFrame">
+					<div id = "Content">
+					<body>
+					<br>
+					对课程的期待
+					<li>我要学HTML5写酷炫的游戏！！</li>
+					<li>想多了解一些酷炫好玩的JS和CSS库！</li>
+					<li>求各种好用的开发工具！</li><br>
+					对WEB前端的理解
+					<li>这两天自己不仅是个码农还是美工还是个编辑…</li>
+					<li>深切感受到一个人真的不太可能做好前端</li>
+					<li>想要做好需要很好的团队合作</li>
+					<li>最重要的是浏览器不兼容简直坑爹TAT在CHROME下完美的东西<br>在IE下就有各种瑕疵。摔！</li><br>
+					对老师助教想说的话
+					<li>助教人赞就是逗比了点。XD</li>
+					<br>
+					</body>
+					</div>
+				</div>
+				<div id = "Line2"><img  src = "sites\images\frameline.png"></div>
+				<footer id = "ContentFooter"></footer>
+				<a href="introduction.html">
+						<img id = "Introduce" src="sites\icons\Introduce.png">
+				</a>
+			</section>
+		</div>
+	</body>
+	</html>
