--- a/blog.html
+++ b/blog.html
@@ -219,6 +219,15 @@
 				</div>
 				<div class = "Article">
 					<li style="list-style-type:none;">
+						<a href="article_02.html" style="text-decoration:none">
+						<img class = "Article_icon" src="sites\icons\article_01.png">
+						<span class = "Article_head">Javascript基础练习</span>
+						<span class = "Article_abstract">基础练习 / 进阶练习 / Bonus / Untrusted</span>
+						</a>
+					</li>
+				</div>
+				<div class = "Article">
+					<li style="list-style-type:none;">
 	<!-- 					<a href="mission.html" style="text-decoration:none"> -->
 						<img class = "Article_icon" src="sites\icons\article_02.png">
 						<span class = "Article_head">赏月Recital</span>
