更改了按钮信息

--- a/hw4_picture_html/index.html
+++ b/hw4_picture_html/index.html
@@ -14,10 +14,10 @@
 	<div id = "Content">
 		<div id = "focus">
 			<div id = "focus_left_area">
-				<span id = "focus_left" title = "点击查看上一张图" ></span>
+				<img id = "focus_left" src = "pic/focus_left.png" title = "点击查看上一张图" >
 			</div>
 			<div id = "focus_right_area">
-				<span id = "focus_right" title = "点击查看下一张图"></span>
+				<img id = "focus_right" src = "pic/focus_right.png" title = "点击查看下一张图">
 			</div>
 			<div id = "focus_view">
 				<ul>
