--- a/bahamut/P1.html
+++ b/bahamut/P1.html
@@ -29,7 +29,7 @@
 				<div>
 					<div class="hover-header-name">火伤</div>
 					<div class="hover-categories">
-						<em class="hover-status-type">魔法
+						<em class="hover-status-type">减益效果
 						</em>
 					</div>
 				</div>
@@ -180,6 +180,25 @@
 								<hr />
 								<div class="info-section">
 									<h2>P1-双塔尼亚</h2>
+									<h3>简易流程说明</h3>
+									<li>开场顺劈</li>
+									<li>火球+旋风→分散诱导+集合分摊</li>
+									<li>第一次死刑+顺劈</li>
+									<li>火球+旋风（可能压掉）</li>
+									<br>
+									<li>五连喷+黑球+五连喷→诱导（注意后补）</li>
+									<li>第二次死刑</li>
+									<li>黑球+旋风→分散诱导后点名玩家进入拘束装置引爆黑球</li>
+									<li>顺劈</li>
+									<br>
+									<li>五连喷+黑球</li>
+									<li>五连喷+火球</li>
+									<li>第三次死刑+顺劈</li>
+									<li>黑球+旋风</li>
+									<li>顺劈</li>
+									<li>五连喷+黑球+五连喷+火球→循环</li>
+									<br>
+									<hr />
 									<h3>核心机制-『拘束装置』</h3>
 									<p>当双塔尼亚的血量被削减至74%,44%和0%时，会在BOSS所在位置依次掉落三个『拘束装置』。玩家站在拘束装置上，会获得
 										<a href="" class="status-area" name="Neurolink">
@@ -195,9 +214,10 @@
 											<li>※B→C→D点为P1-『拘束装置』放置顺序</li>
 										</div>
 									</div>
+									<hr />
 									<h3>开场(100%～74%)</h3>
 									<h4>基本技能</h4>
-									<li>普攻:每三秒对当前MT的单体攻击，中等「物理」「斩属性」伤害。
+									<li>普攻:每3秒对当前MT的单体攻击，中等「物理」「斩属性」伤害。
 									<li>垂直下落：「物理」顺劈技能。BOSS正前方扇形范围攻击，造成大量「物理」伤害。</li>
 									<li>死刑：换坦机制，死刑技能。对当前坦克造成特大「物理伤害」，并附加一层
 										<a href="" class="status-area" name="SlashingResistanceDownII">
@@ -206,8 +226,10 @@
 										</a>
 										效果。</li>
 									<li>旋风：即死机制。读条结束时在任意四名玩家脚下刷新一个旋风。玩家踩中旋风时，旋风将会爆炸秒杀上面的玩家，并将周围玩家击退到场地边缘导致死亡。玩家需要在判定前保持移动，躲开脚下的旋风。</li>
-									<li>火球：分摊机制。BOSS点名一名玩家头上出现红色三角标记，并在6秒后对标记玩家造成大量「魔法」伤害，伤害可以由小范围内的其余玩家一起分摊。无减伤下7人分摊大概伤害在3w7左右。</li>
+									<li>火球：分摊机制。BOSS点名一名玩家头上出现红色三角标记，并在6秒后对标记玩家造成大量「魔法」伤害，伤害可以由小范围内的其余玩家一起分摊。无减伤下7人分摊伤害大概在3w7左右。</li>
+									<h4>阶段时间轴</h4>
 									<div id="p1.1-timeline-area" class="timeline-area"></div>
+									<h4>阶段详解</h4>
 									<p>开场后不久BOSS就会使用一次「垂直下落」，除MT外其他玩家注意不要被顺劈打到。</p>
 									<p>接着就是组合技「火球+旋风」——一名玩家被点名红色三角，同时BOSS开始读条「旋风」，此时所有人需要先诱导旋风后，再到BOSS的正背后集合分摊火球。
 									</p>
@@ -224,7 +246,8 @@
 									<p>组合技后是「死刑+垂直下落」，在死刑动画结束前，副坦「挑衅」+主坦「退避」。</p>
 									<p class="attention-part">※换坦后之前的主坦第一时间远离正面躲开顺劈。</p>
 									<p class="attention-part">※治疗注意「垂直下落」和「普攻」可能会同时判定导致MT瞬间大出血。</p><br>
-									<p>在「垂直下落」后不久BOSS就会掉落第一个『拘束装置』，主坦立刻将BOSS拉到下一个位置。如果队伍无法在下一个技能发动前进入P2，则需要提高DPS/降低失误率。</p><br>
+									<p>在「垂直下落」后，会循环开场的「火球+旋风」，一般队伍可以在「火球+旋风」前后进入下一阶段。</p><br>
+									<hr />
 									<h3>第一个『拘束装置』掉落后(74%～44%)</h3>
 									<h4>新增技能</h4>
 									<li>魔力炼成：诱导机制。一名DPS将会被点名紫色三角，同时双塔尼亚正下方会生成一个黑球，并缓慢加速朝被定名的玩家移动。该玩家需要站在『拘束装置』内引爆黑球——黑球会爆炸产生中等范围的AOE，对『拘束装置』内玩家造成少量伤害，秒杀范围内的其他玩家。同时，被点名玩家将会被附加
@@ -234,23 +257,40 @@
 										</a>
 										效果——使得下一次碰到黑球时会被直接秒杀。
 									</li>
-									<li>液体地狱：诱导机制。BOSS会朝最远的一名玩家使用五连喷，每次造成2k左右的伤害并在玩家脚下留下一个火圈。踩在火圈上的玩家会被附加
+									<li>液体地狱：诱导机制。BOSS对离自身较远（超过一定距离）的玩家使用五连喷，每次造成2k左右的伤害并在玩家脚下留下一个火圈。踩在火圈里会获得
 										<a href="" class="status-area" name="Burns">
 											<img src="img/status/Burns.png" alt="">
 											&nbsp;&nbsp;&nbsp;火伤
 										</a>
-										效果而被直接秒杀。
-									<p class="attention-part">※治疗注意此时MT仍然会受到普攻伤害。</p><br>
+										效果而被直接秒杀。如果所有玩家都距离BOSS较近，则BOSS将会随机选择目标。如果有多个玩家同时距离较远，则这几名玩家都会成为BOSS的目标。因此通常由1～2名玩家在远处诱导。
+									<p class="attention-part">※治疗注意BOSS在发动「液体地狱」时仍然会对MT使用「普攻」。</p><br>
 									</li>
+									<h4>阶段时间轴</h4>
 									<div id="p1.2-timeline-area" class="timeline-area"></div>
-									<p>第一个『拘束装置』掉落后，MT立刻将BOSS拉到下一个位置，同时所有人调整自己的站位——BOSS在不久会发动「液体地狱」。「液体地狱」一般由远程物理职业（诗人/机工）进行诱导，注意保持自己在最远处，其他玩家记得离BOSS近一些。</p>
-									<p class="attention-part">※后续阶段，如果诱导的玩家被点名了「魔力炼成」，则需要另一名玩家（一般由学者）后补诱导「液体地狱」。</p>
+									<h4>阶段详解</h4>
+									<p>第一个『拘束装置』掉落后，MT立刻将BOSS拉到下一个位置，同时所有人调整自己的站位——BOSS在不久会发动「液体地狱」。「液体地狱」一般由远程物理职业（诗人/机工）进行诱导，注意保持自己在最远处，其他玩家记得离BOSS近一些。如果是2名玩家诱导，这两名玩家需要分别站在场地左右，增加诱导的可移动范围。</p>
+									<p class="attention-part">※如果诱导的玩家被点名了「魔力炼成」，则需要另一名玩家（一般由学者）后补诱导「液体地狱」，诱导方法可参考下图（非唯一）。</p>
+									<div class="figure aligncenter">
+										<img src="img/p1-liquidhell.png" alt="">
+										<div>
+											<li class="text-align-center">※非诱导玩家靠近BOSS防止被误点名</li>
+											<li class="text-align-center">※诱导玩家注意不要将火圈覆盖到『拘束装置』</li>
+										</div>
+									</div>
 									<p class="attention-part">※按照上文旋风的站位，进入第二阶段时远程物理和学者刚好会在最远处。</p><br>
-									<p>「液体地狱」后BOSS就会使用第一次「魔力炼成」，被标记的DPS到『拘束装置』内引爆黑球，其余玩家注意远离黑球的爆炸范围（约为暗影核爆的大小）。</p>
-									<p class="attention-part">※由于进入『拘束装置』会大幅降低玩家造成的伤害，熟练后，玩家可以在黑球快接近时再进入。</p><br>
-									<p>第二次液体地狱后是死刑，主副坦记得开好减伤，及时换坦。</p><br>
-									<p>死刑后是组合技「魔力炼成+旋风」——注意，由于黑球从刷新到玩家引爆的过程中BOSS会发动「旋风」，玩家需要在『拘束装置』外先行诱导旋风出现后再进入。</p><br>
+									<p>接着是组合技「魔力炼成+液体地狱」，被标记的DPS到『拘束装置』内引爆黑球，其余玩家注意远离黑球的爆炸范围。</p>
+									<p class="attention-part">※由于进入『拘束装置』会大幅降低玩家造成的伤害，在熟练后玩家可以在黑球快接近时再进入。</p>
+									<p class="attention-part">※如果诱导玩家被点名黑球，候补玩家记得引导「液体地狱」。</p><br>
+									<p>然后是「死刑」，主副坦记得开好减伤，及时换坦。</p><br>
+									<p>死刑后是组合技「魔力炼成+旋风」——注意，由于黑球从刷新到玩家引爆的过程中BOSS会发动「旋风」，玩家需要在『拘束装置』外先行诱导旋风出现后再进入（参考下图）。</p><br>
+									<div class="figure aligncenter">
+										<img src="img/p1-neurolink.png" alt="">
+										<div>
+											<li class="text-align-center">※诱导旋风后再进入『拘束装置』</li>
+										</div>
+									</div>
 									<p>随后是第二次「垂直下落」，正常情况下此时BOSS会掉落第二个『拘束装置』进入P1最后阶段，MT立刻将BOSS拉到最后一个标记处。</p><br>
+									<hr />
 									<h3>第二个『拘束装置』掉落后(44%～0%)</h3>
 									<h4>技能改动</h4>
 									<li>魔力炼成*2：诱导机制。这个阶段将会点名2名DPS，同时生成2个黑球。由于黑球是AOE范围伤害并且带有<a href="" class="status-area"  name="ManaHypersensitivity">
@@ -258,18 +298,28 @@
 											&nbsp;&nbsp;&nbsp;魔力过敏症
 										</a>
 										效果，因此2名DPS需要一人站在一个『拘束装置』内，并且这两个『拘束装置』需要间隔足够的距离防止黑球AOE互相覆盖，这也是为什么『拘束装置』需要呈三角摆放的原因。</li>
-									<li>液体地狱：诱导机制。这个阶段将会随机点名任何一位玩家。</li>
+									<li>液体地狱：诱导机制。这个阶段只会瞄准一名除MT以外的玩家，与距离无关。</li>
+									<h4>阶段时间轴</h4>
 									<div id="p1.3-timeline-area" class="timeline-area"></div>
+									<h4>阶段详解</h4>
 									<p>同上一阶段相同，『拘束装置』掉落后，MT立刻将BOSS拉到下一个位置，同时所有人调整自己的站位——BOSS在不久会发动「液体地狱」。</p>
 									<p class="attention-part">※注意此阶段「液体地狱」是随机点名任意一名玩家。</p><br>
 									<p>然后是「魔力炼成x2」，2名DPS一人在一个『拘束装置』内引爆。</p>
 									<p class="attention-part">※按照攻略中的站位分配，如果黑球点名同侧DPS，推荐远程去另一侧引爆。</p><br>
 									<p>接着是组合技「液体地狱+火球」，被点名液体地狱的玩家注意边引导边朝集合点靠近，第五下喷结束后立刻就是火球分摊，但不要让火圈覆盖了集合点。也可以选择被点名「液体地狱」的人不参与分摊，但由于这名玩家同时有可能被点名「火球」，因此不推荐这样处理，队内请自行斟酌。另外，推荐MT也参与分摊。</p>
-									<p class="attention-part">※治疗注意，如果MT不参与分摊，7人分摊的火球平均伤害在3w左右。被点名「液体地狱」的人还会额外受到2k*5≈1w的伤害。</p>
+									<p class="attention-part">※治疗注意，如果MT不参与分摊，无减伤下7人分摊的火球平均伤害在3w8左右。被点名「液体地狱」的人还会额外受到2k*5≈1w的伤害。</p>
 									<p class="attention-part">※如果近战被点名「液体地狱」可以参考下图路线引导（非唯一）。</p><br>
+									<div class="figure aligncenter">
+										<img src="img/p1-liquidhell-melee.png" alt="">
+										<div>
+											<li class="text-align-center">※可开启疾跑，注意火圈不要覆盖到集合点</li>
+										</div>
+									</div>
 									<p>组合技后是「死刑+垂直下落」，同P1阶段处理即可。这一次死刑时坦克的退避仍在CD，注意控制好仇恨（如果此时忍者有烟雾弹，影渡等技能也可使用）。</p><br>
 									<p>接着是组合技「魔力炼成x2+旋风」，除了这次是双黑球外与上一阶段处理方法相同。</p><br>
 									<p>最后是一次「垂直下落」，结束后进入循环——液体地狱→魔力炼成x2→组合技「液体地狱+火球」。一般队伍能在这一次组合技后结束战斗（2:50秒左右），随后双塔尼亚将会飞走，标志P1结束。否则3:00时双塔尼亚将会变得不可选中并读条「以太狂暴」团灭队伍。</p><br>
+									<hr />
+									<h3>p1完整时间轴</h3>
 									<div id="p1-timeline-area" class="timeline-area"></div>
 								</div>
 							</div>
