--- a/bahamut/P1.html
+++ b/bahamut/P1.html
@@ -329,9 +329,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/p1-timeline.js"></script>
-	<script src="js/hover-global.js"></script>
-	<script src="js/status-database.js"></script>
+	<script src="http://lincthu.github.io/bahamut/js/p1-timeline.js"></script>
+	<script src="http://lincthu.github.io/bahamut/js/hover-global.js"></script>
+	<script src="http://lincthu.github.io/bahamut/js/status-database.js"></script>
 </body>
 
 </html>
