--- a/bahamut/P1.html
+++ b/bahamut/P1.html
@@ -204,7 +204,7 @@
 									<hr />
 									<h3>核心机制-『拘束装置』</h3>
 									<p>当双塔尼亚的血量被削减至74%,44%和0%时，会在BOSS所在位置依次掉落三个
-										<a  class="img-hover-area" name="neorolink">
+										<a  class="img-hover-area" name="neurolink">
 											<img src="img/hover-sign.png" alt="">
 											&nbsp;&nbsp;&nbsp;拘束装置
 										</a>
