--- a/bahamut/P1.html
+++ b/bahamut/P1.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div id="image-frame">
-		<img class="hover-img" src="img/hover/map.png" alt="">
+		<img class="hover-img" src="" alt="">
 	</div>
 	<div id="status-frame" class="hover-frame">
 		<div class="hover-block">
@@ -240,7 +240,7 @@
 										</a>
 										。玩家踩中旋风时，旋风将会爆炸秒杀上面的玩家，并将周围玩家击退到场地边缘导致死亡。玩家需要在判定前保持移动，躲开脚下的旋风。</li>
 									<li>火球：分摊机制。BOSS点名一名玩家头上出现
-										<a  class="img-hover-area" name="fireball">
+										<a  class="img-hover-area" name="firetriangle">
 											<img src="img/hover-sign.png" alt="">
 											&nbsp;&nbsp;&nbsp;红色三角标记
 										</a>
